deploy: 45d68eaa0d95b1590aac71dd932b78cbf628ca43

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     rel="stylesheet" />
 
   <title>Ignite Timer</title>
-  <script type="module" crossorigin src="/assets/index.cfeff88a.js"></script>
+  <script type="module" crossorigin src="/02-ignite-timer/assets/index.cfeff88a.js"></script>
 </head>
 
 <body>
